Cleaned JSON and added title to index

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
    <head>
       <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
       <meta charset="UTF-8">
+	  <title>Slangikääntäjä</title>
       <meta name="description" content="Slangikääntäjä">
       <meta name="author" content="Antti Koskinen">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
